# MacSploit

./: 123..  README.md  dylibtest.c  exploit  exploit2.dylib  inject.c  install_script.sh  install_script_new.sh  main.c  old_exploit.cpp  test1  test2
Client/: CMakeLists.txt  bitop.h  build_files.sh  communication.h  crypt.h  drawing.h  exploit.cpp  exploit.h  functions.h  http_request.h  new-exploit.h  old-exploit.h  old_settings.h  roblox_rpc.h  scripts.h  settings.h  websocket.h  whitelist.h
Client/Luau/: BytecodeBuilder.cpp
Client/Luau/Luau/: Common.h  DenseHash.h
Client/LuauNew/Luau/: BytecodeBuilder.h
Client/fmt/doc/html/: api.html  contents.html
Client/imgui/: imconfig.h
Client/openssl/: opensslv.h
Client/security/: obfuscator.hpp
